--- a/mnist_mini.ipynb
+++ b/mnist_mini.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "5faf0750",
    "metadata": {},
    "outputs": [],
@@ -21,9 +21,9 @@
     "\n",
     "\n",
     "train_loader = torch.utils.data.DataLoader(datasets.MNIST('./data', train=True, download=True,\n",
-    "    transform=transforms.ToTensor()), batch_size=256, shuffle=True)\n",
+    "    transform=transforms.ToTensor()), batch_size=512, shuffle=True, pin_memory=True)\n",
     "test_loader = torch.utils.data.DataLoader(datasets.MNIST('./data', train=False, download=True,\n",
-    "    transform=transforms.ToTensor()), batch_size=256)\n"
+    "    transform=transforms.ToTensor()), batch_size=512, pin_memory=True)\n"
    ]
   },
   {
